@startuml

title __MODELS's Class Diagram__\n

  package com.knowwhere.stocksapi {
    package com.knowwhere.stocksapi.models {
      class BaseModel {
          - createdBy : Long
          - updatedAt : Date
          + getCreatedBy()
          + getUpdatedAt()
          + setCreatedBy()
          + setUpdatedAt()
          + equals()
          + hashCode()
          + toString()
      }
    }
  }
  

  package com.knowwhere.stocksapi {
    package com.knowwhere.stocksapi.models {
      class CallType {
          - id : int
          - name : String
          + getId()
          + getName()
          + CallType()
          + CallType()
          + equals()
          + hashCode()
          + toString()
      }
    }
  }
  

  package com.knowwhere.stocksapi {
    package com.knowwhere.stocksapi.models {
      class Commodity {
          - name : String
          - price : Double
          + Commodity()
          + getName()
          + getPrice()
          + equals()
          + hashCode()
          + toString()
      }
    }
  }
  

  package com.knowwhere.stocksapi {
    package com.knowwhere.stocksapi.models {
      class Notification {
          - title : String
          - content : String
          + Notification()
          + getTitle()
          + getContent()
          + toString()
          + equals()
          + hashCode()
      }
    }
  }
  

  package com.knowwhere.stocksapi {
    package com.knowwhere.stocksapi.models {
      class StockCall {
          - id : int
          - createdAt : Date
          - price : double
          - stopLoss : double
          - target1 : double
          - target2 : double
          - target3 : double
          - completed : boolean
          + StockCall()
          + StockCall()
          + setId()
          + setStockInfo()
          + setCallType()
          + setPrice()
          + setStopLoss()
          + setTarget1()
          + setTarget2()
          + setTarget3()
          + setCompleted()
          + getId()
          + getStockInfo()
          + getCallType()
          + getPrice()
          + getStopLoss()
          + getTarget1()
          + getTarget2()
          + getTarget3()
          + isCompleted()
          + getCreatedAt()
          + setCreatedAt()
          + compareTo()
          + equals()
          + hashCode()
          + toString()
      }
    }
  }
  

  package com.knowwhere.stocksapi {
    package com.knowwhere.stocksapi.models {
      class StockInfo {
          - id : int
          - name : String
          + StockInfo()
          + StockInfo()
          + getId()
          + getName()
          + getStockType()
          + equals()
          + hashCode()
          + toString()
      }
    }
  }
  

  package com.knowwhere.stocksapi {
    package com.knowwhere.stocksapi.models {
      class StockType {
          - id : int
          - name : String
          + getId()
          + getName()
          + StockType()
          + StockType()
          + equals()
          + hashCode()
          + toString()
      }
    }
  }
  

  package com.knowwhere.stocksapi {
    package com.knowwhere.stocksapi.models {
      class Users {
          - id : int
          - name : String
          - email : String
          - notificationToken : String
          - accessToken : String
          - refreshToken : String
          - otp : String
          - password : String
          - phoneNumber : String
          - isAdmin : boolean
          - deleted : boolean
          + Users()
          + Users()
          + getName()
          + setName()
          + isAdmin()
          + setAdmin()
          + getId()
          + setId()
          + getEmail()
          + setEmail()
          + getNotificationToken()
          + setNotificationToken()
          + getAccessToken()
          + setAccessToken()
          + getRefreshToken()
          + setRefreshToken()
          + getPassword()
          + setPassword()
          + getPhoneNumber()
          + setPhoneNumber()
          + getOtp()
          + setOtp()
          + isDeleted()
          + setDeleted()
          + equals()
          + hashCode()
          + toString()
      }
    }
  }
  

  StockCall -up-|> Comparable
  StockCall -up-|> BaseModel
  StockCall o-- StockInfo : stockInfo
  StockCall o-- CallType : callType
  StockInfo o-- StockType : stockType
  Users -up-|> BaseModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
